# history-generator

./: CLAUDE.md  Cargo.toml  Justfile  README.md
docs/: extensibility-architecture.md  migration-and-refactor-to-bevy.md  project-idea.md  sim-gaps.md  testing-plan.md
examples/: economy_debug.rs
sql/: copy_entities.sql  copy_event_effects.sql  copy_event_participants.sql  copy_events.sql  copy_relationships.sql  load.sql  schema.sql  verify.sql  verify_geography.sql
src/: id.rs  lib.rs  scenario.rs  testutil.rs
src/db/: load.rs  migrate.rs  mod.rs
src/ecs/: app.rs  clock.rs  conditions.rs  events.rs  mod.rs  plugin.rs  schedule.rs  spawn.rs  test_helpers.rs  time.rs
src/flush/: jsonl.rs  mod.rs
src/model/: action.rs  cultural_value.rs  effect.rs  entity.rs  entity_data.rs  event.rs  grievance.rs  macros.rs  mod.rs  population.rs  relationship.rs  secret.rs  terrain.rs  timestamp.rs  traits.rs  world.rs
src/procgen/: artifacts.rs  inhabitants.rs  mod.rs  seed.rs  tables.rs  writings.rs
src/sim/: actions.rs  agency.rs  buildings.rs  conflicts.rs  context.rs  crime.rs  culture.rs  culture_names.rs  demographics.rs  disease.rs  economy.rs  education.rs  environment.rs  extra_keys.rs  faction_names.rs  grievance.rs  helpers.rs  items.rs  knowledge.rs  loyalty.rs  (+13 more)
tests/: actions.rs  buildings.rs  conflicts.rs  environment.rs  geography_round_trip.rs  jsonl_round_trip.rs  knowledge.rs  maritime.rs  phase3_demographics.rs  phase4_politics.rs  phase5_5_agency.rs  phase6_family.rs  player_actions.rs  postgres_round_trip.rs  procgen_integration.rs  reputation.rs
(+86 files in other folders)
