[package]
name = "history-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "=0.18.0"
bevy_ecs = "=0.18.0"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["rt", "macros"] }
